--- a/doc/draft/main.tex
+++ b/doc/draft/main.tex
@@ -5,6 +5,14 @@
 \usepackage{cleveref}
 \usepackage{natbib}
 
+\usepackage{hyperref}
+\hypersetup{
+	colorlinks=true,
+	linkcolor=blue,
+	filecolor=magenta,      
+	urlcolor=cyan,
+}
+
 \title{360 Optical Flow}
 
 \begin{document}
@@ -24,6 +32,8 @@ Abstract:
 \input{sections/approach}
 
 \input{sections/experiments}
+
+\input{sections/applications}
 
 \input{sections/conclusion}
 
