--- a/doc/draft/sections/introduction.tex
+++ b/doc/draft/sections/introduction.tex
@@ -43,7 +43,7 @@ For a projection with the central point $(\theta_0, \phi_0)$,
 \section{Optical Flow}
 
 \begin{center}
-	\begin{tabular}{||c c ||} 
+	\begin{tabular}{ c | c } 
 		\hline
 		Notice & Meaning  \\ [0.5ex] 
 		\hline\hline
