add spherical error comput function

--- a/doc/draft/main.tex
+++ b/doc/draft/main.tex
@@ -5,6 +5,11 @@
 \usepackage{cleveref}
 \usepackage{natbib}
 
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.8}
+\usepackage{pgfplotstable}
+\usepgfplotslibrary{groupplots}
+
 \usepackage{hyperref}
 \hypersetup{
 	colorlinks=true,
