--- a/doc/draft/sections/approach.tex
+++ b/doc/draft/sections/approach.tex
@@ -1,6 +1,6 @@
 
 
-\chapter{Approach}
+\chapter{Approach}\label{sec:approach}
 
 \section{Panoramic Optical Flow}
 
@@ -19,31 +19,39 @@ Reference:
 
 
 
-\section{Panoramic Optical Flow Synthetic Dataset}\ref{sec:app:panoof}
+\section{Synthesize Panoramic Optical Flow}\label{sec:app:panoof}
 
-The real word data rich and colourful, but it very hard to estimate or measure the accurate segmentation, motion flow, e.t.c form the read word scene.
+The real word data rich and colourful, but it very hard to estimate or measure the accurate segmentation, motion flow, e.t.c form the real word scene.
 So the synthetic dataset is commonly haired to generate the ground truth data for training or performance evaluation, such as ~\cite{habitat19iccv}.
 
 Meanwhile, the real word photo image is hard to estimate accurate optical flow.
-Although like KITTI~\cite{Menze2018JPRS} or MPI Sintel~\cite{Butler:ECCV:2012} pinhole image opical flow, e.t.c currently don't have any public panoramic optical flow dataset is available.
+Although KITTI~\cite{Menze2018JPRS} or MPI Sintel~\cite{Butler:ECCV:2012} pinhole image optical flow, e.t.c currently don't have any public panoramic optical flow dataset is available.
 
-\subsection{Overview}
+\begin{figure}[hbt!]
+	\centering
+	\includegraphics[width=\linewidth]{images/synthetic_optical_flow/of_render.pdf}
+	\caption{The pipeline of panoramic optical flow rendering.}
+	\label{fig:approach:panoof:pipline}
+\end{figure}
 
-The traditional OpenGL pipeline don't support the panoramic camera model and optical flow generation.
-For synthesising ground truth RGB images and optical flow, we implemented and hired an panoramic camera model.
+The synthetic panoramic optical flow rendered with on-the-shelf OpenGL render pipeline and store in the ERP image.
+The input are textured 3D mesh and OpenGL's camera pose.
+The process shown as the Fig.~\ref{fig:approach:panoof:pipline} composing with the following 3 steps:
 
-The camera model composes with 3 parts:
-\begin{itemize}
-	\item Equirectangular projection;
-	\item Warp Around Processing;
-	\item Optical flow estimation;
-\end{itemize}
+\begin{enumerate}
+	\item Camera Model: OpenGl render with Equirectangular projection (ERP);
+	\item Warp Around: Processing the warp around at the boundary of image;
+	\item Occlusion: estimate the occlusion of optical flow ;
+\end{enumerate}
 
-\subsection{Equirectangular Projection}
+\subsection{Camera Model}
 
-The panoramic camera model render the 3D mesh to a panoramic image with the equirectangular projection.
-To achieve the projection, the geometry shader transform the 3D mesh from cartesian coordinate system to spherical coordinate system.
-The projection 
+The traditional OpenGL rendering pipeline doesn't support the panoramic camera model and optical flow generation.
+For synthesising ground truth panoramic RGB images and optical flow, we implement and hire equirectangular perspective camera model.
+
+The equirectangular perspective panoramic camera model render the 3D mesh to  equirectangular images.
+To achieve the camera model the OpenGL geometry shaders transform the 3D mesh from Cartesian coordinate system to spherical coordinate system. 
+The camera mode
 
 Furthermore, we use Replica to demonstrate. 
 The Replica dataset coordinate system show as the Fig.~\ref{fig:approach:coord_hotel_00}.
@@ -67,7 +75,7 @@ Meanwhile, the $\theta$ and
 \end{figure}
 
 
-\subsection{Warp Around Processing}
+\subsection{Warp Around}
 
 
 
@@ -78,10 +86,9 @@ Meanwhile, the $\theta$ and
 \subsubsection{Poles}
 
 
-\subsection{Optical Flow Synthesis}
+\subsection{Occlusion}
 
 
-
-\subsubsection{Occlusion}
+\subsection{ERP Image}
 
 
