--- a/doc/paper_draft/sections/2-relatedworks.tex
+++ b/doc/paper_draft/sections/2-relatedworks.tex
@@ -1,11 +1,34 @@
-
 \section{Related Works}
 
 
-\subsection{Equirectangular Image}
+
+%%%%%%
 
 
-\subsection{Cube Map}
+\subsection{Panoramic Image }
+
+With the
+Equirectangular Image format is most popular panoramic image format which have been part of 
+
+
+
+\subsubsection{CNN Method}
+
+
+
+
+
+\subsection{Optical Flow}
+
+
+
+
+
+%%%%%
+
+
+
+
 
 
 \subsection{Geodesic Grids}
@@ -45,19 +68,19 @@ How to git ride of the distortion is key point of panoramic image processing met
 
 Icosahedron is used to averagely sampling from the panoramic image, to make less overlap area between each sampling area.
 
-\citet{eder2019mapped}
+\cite{eder2019mapped}
 
 
 
 
 %\subsection{Undistortion}
 
-\textbf{Gnomonic Projection} ~\citet{gnomonicprojection}
+\textbf{Gnomonic Projection} ~\cite{gnomonicprojection}
 
 The methods use gnomonic projection project part of sphere to tangent plane, which preserve geodesics and have little distortion near the central point.
 So the tangent plane is hired to mitigate the influence of the panoramic image  distortion on the perspective image processing methods.
 
-\citet{coors2018spherenet} use Gnomonic Projection to directly sample data from panoramic image, in this way they transform the omnidirectional sampling to perspective's.
+\cite{coors2018spherenet} use Gnomonic Projection to directly sample data from panoramic image, in this way they transform the omnidirectional sampling to perspective's.
 
 \textbf{Cube Map}
 
