--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -87,11 +87,11 @@ There are obviously artefacts at the boundary of moving objects, Figure. ~\ref{f
 	\label{fig:exp:blendermv}
 \end{figure}
 
-\textbf{Replica 360} ~\citet{replica19arxiv}
+\textbf{Replica 360} ~\cite{replica19arxiv}
 
 
 
-\textbf{Matterport3D} ~\citet{Matterport3D}
+\textbf{Matterport3D} ~\cite{Matterport3D}
 
 
 \subsection{Real World Dataset}
